# balatro-rs

./: .force_ci_trigger  .gitignore  .pre-commit-config.yaml  ADVANCED_JOKER_FRAMEWORK.md  ARCHITECTURE.md  BENCHMARKS_IMPLEMENTATION.md  BOTDEAN_REVIEW_WISDOM.md  BOTDEAN_REVIEW_WISDOM_PR713.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DETAILED_BENCHMARK_RESULTS.md  DUAL_FRAMEWORK_ELIMINATION_MIGRATION_GUIDE.md  F64_MIGRATION_GUIDE.md  FORMAT_UTILITIES.md  IMPLEMENTATION_BRIEF.md  ISSUE_CLOSURE_SUMMARY.md  JOKER_API_REFERENCE.md  JOKER_EFFECT_PROCESSOR_OPTIMIZATION.md  JOKER_EXAMPLES_GUIDE.md  JOKER_PERFORMANCE_GUIDE.md  JOKER_TRAIT_IMPLEMENTATION.md  KERNEL_WISDOM_574.md  LINUSTORBOT_KERNEL_WISDOM.md  PHASE1_PERFORMANCE_VALIDATION_REPORT.md  PRE_COMMIT_GUIDE.md  PYTHON_API_TUTORIAL.md  README.md  REVIEW_FIXES.md  SALVAGE_IMPLEMENTATION_NOTES.md  SCALING_JOKER_DESIGN.md  SECURITY.md  SKIP_TAG_DEPENDENCIES.md  TAROT_QA_COMPREHENSIVE_REPORT.md  TASKS.md  TESTING_FRAMEWORK_SALVAGE_PLAN.md  TESTING_FRAMEWORK_SALVAGE_SPEC.md  UNCLEBOT_CLEAN_CODE_WISDOM.md  UNCLEBOT_CLEAN_CODE_WISDOM_PR624.md  baseline_bench.txt  (+11 more)
core/: CLAUDE.md  Cargo.toml
core/benches/: CLAUDE.md  actionspace_benchmark.rs  benchmark.rs  effect_processor_benchmark.rs  effect_processor_benchmark_minimal.rs  effect_processor_benchmark_simple.rs  joker_effect_processor_trait_optimization.rs  skip_tag_benchmark.rs  tarot_performance.rs  trait_benchmark.rs  trait_benchmark_minimal.rs  trait_performance.rs
core/examples/: CLAUDE.md  card_targeting_demo.rs  edge_case_examples.rs  joker_comprehensive_guide.rs  performance_examples.rs  test_harness.rs  trait_composition_examples.rs
core/src/: CLAUDE.md  action.rs  available.rs  basic_chips_jokers.rs  bounded_action_history.rs  card.rs  card_filter.rs  config.rs  debug_test.rs  deck.rs  display.rs  error.rs  game.rs  generator.rs  hand.rs  joker_effect_processor.rs  joker_factory.rs  joker_impl.rs  joker_json_parameters.rs  joker_metadata.rs  (+24 more)
(+199 files in other folders)
