[package]
name = "balatro-rs"
version = "0.0.1"
edition = "2021"
description = "Game engine and move generator for simplified version of balatro"
license = "MIT"
repository ="https://github.com/evanofslack/balatro-rs"
keywords = ["balatro", "game-engine", "move-generator"]

[dependencies]
anyhow = "~1.0"
colored = {version = "2.2.0", optional = true}
indexmap = "2.6.0"
itertools = "0.13.0"
once_cell = "1.20"
pyo3 = {version = "0.24.1", optional = true, features = ["auto-initialize"]}
rand = "~0.8.5"
regex = { version = "~1.10.2", optional = true }
rand_chacha = "~0.3.1"
serde = { version = "~1.0.215", optional = true, features = ["derive"] }
serde_json = { version = "~1.0.118", optional = true }
toml = { version = "~0.8.12", optional = true }
strum = { version = "0.26", features = ["derive"] }
thiserror = "~1.0.61"
tracing = { version = "~0.1.40", optional = true}

[dev-dependencies]
criterion = "0.6.0"

[features]
default = ["serde", "python"]
python = ["dep:pyo3"]
statistical_tests = []  # Enable slow/flaky statistical tests (disabled in CI)
integration_tests = []  # Enable slow integration tests (disabled in CI)
disabled-for-emergency = []  # Temporarily disabled tests with API mismatches
mock = []  # Enable mock testing framework
proptest = []  # Enable property-based testing
serde = ["dep:serde", "dep:serde_json", "dep:toml", "dep:regex"]
colored = ["dep:colored"]

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "state_benchmark"
harness = false

[[bench]]
name = "actionspace_benchmark"
harness = false


[[bench]]
name = "effect_processor_benchmark"
harness = false

[[bench]]
name = "effect_processor_benchmark_simple"
harness = false

[[bench]]
name = "effect_processor_benchmark_minimal"
harness = false

[[bench]]
name = "trait_benchmark"
harness = false

[[bench]]
name = "trait_performance"
harness = false
